@@ -24,7 +24,7 @@ namespace eval client {}
 namespace eval ::ijbridge {
 
     variable version 1.1.1
-    variable rcsid {$Id: ijbridge.tcl,v 1.34 2008/12/13 19:50:15 patthoyts Exp $}
+    variable rcsid {$Id: ijbridge.tcl,v 1.35 2009/01/02 10:52:27 patthoyts Exp $}
 
     # This array MUST be set up by reading the configuration file. The
     # member names given here define the settings permitted in the 
@@ -525,12 +525,28 @@ proc ::ijbridge::OnMessageBody {token type args} {
                 if {$emote} {
                     set a(-body) [string range $a(-body) 4 end]
                 }
+
+                # We have to restrict IRC messages to under 512 bytes.
+                if {$emote} {
+                    set irchdr "PRIVMSG $::client::channel :\001ACTION $nick"
+                } else {
+                    set irchdr "PRIVMSG $::client::channel :<$nick>"
+                }
+                set hdrlen [string length $irchdr]
+                if {$emote} {incr hdrlen}
+
                 foreach line [split $a(-body) \n] {
                     UpdateStats $nick [string length $line]
-                    if {$emote} {
-                        xmit "PRIVMSG $::client::channel :\001ACTION $nick $line\001"
-                    } else {
-                        xmit "PRIVMSG $::client::channel :<$nick> $line"
+                    while {[string length $line] > 0} {
+                        set end [expr {512 - $hdrlen - 32}]
+                        if {$end < [string length $line]} {
+                            set end [string wordstart $line $end]
+                            if {$end < [string length $line]} { incr end -1 }
+                        }
+                        set msg "$irchdr [string range $line 0 $end]"
+                        set line [string range $line [incr end] end]
+                        if {$emote} {append $msg \001}
+                        xmit $msg
                     }
                 }
             }
